Fixed margins on ul on small devices

--- a/src/resources/css/specific/index.css
+++ b/src/resources/css/specific/index.css
@@ -72,7 +72,7 @@
 }
 
 @media (max-width: 40em) {
-  .row.content ul {
+  .content ul {
     margin-left: 0;
   }
 }
